--- a/public/scss/layout/_panel.scss
+++ b/public/scss/layout/_panel.scss
@@ -15,7 +15,7 @@
 
     @include m(centered) {
       @extend %center-align;
-      @extend %panel-padding;
+      // @extend %panel-padding;
     }
 
   }
