--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -30,7 +30,7 @@
 @import "icons";
 
 /*===== Import images =====*/
-@import "img";
+@import "images";
 
 /*===== Import layers =====*/
 @import "layers";
@@ -55,3 +55,7 @@
 
 /*===== Import slideshow =====*/
 @import "slideshow";
+
+/*===== Import videos =====*/
+@import "videos";
+
