--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -98,6 +98,7 @@ button {
 
 /*===== Footer style =====*/
 footer {
+  background-color: rgba(26, 32, 63, 0.9);
   border-top: 1px solid palette(grey, xx-light);
 
   p {
