--- a/public/scss/modules/_images.scss
+++ b/public/scss/modules/_images.scss
@@ -1,4 +1,4 @@
-/*_img.scss*/
+/*_images.scss*/
 
 /**** IMAGES
 *=======================================================================*/
@@ -18,18 +18,20 @@
     @extend %img-hlpr;
     background-color: rgba(0, 0, 0, 0.05);
     border-radius: $br--default;
-    // width: rem(320px);
     margin-top: rem(20px);
-    // min-width: rem(250px);
+    min-width: rem(260px);
     transition: opacity $trnstn-quick;
 
-    @include medq(split-lg) {
-      width: rem(320px);
+    @include medq(split-md) {
+      // margin: rem(160px) auto;
+      max-width: 340px;
+      margin-bottom: rem(80px);
     }
 
-    @include medq(split-md) {
-      margin-bottom: rem(70px);
-      width: 100%;
+    @include medq(split-sm) {
+      display: block;
+      margin: 0 auto;
+      // max-width: 100vw;
     }
 
   }
